# docker-haskell-example

./: .dockerignore  .gitignore  Dockerfile  EMBEDDING.md  Makefile  README.md  cabal.project  docker-haskell-example.cabal  docker.cabal.config  encrypted.txt
src/: Main.hs
